chore: Complete P4 code quality improvements
Completed 5 P4 issues focused on template fixes and Java 21 enhancements:

Template Improvements:
- Add publish_to: none to generated pubspec.yaml to silence git dependency warnings
- Remove unused response variable in void return methods (delete operations)
- Add explicit type parameters to all Dio method calls (<Response> and <void>)

Java 21 Enhancements:
- Use sequenced collections: Replace alternatives.get(0) with alternatives.getFirst()
- Convert switch statements to enhanced switch expressions in:
  - getTestValueForType() method
  - getSampleResponseJson() method

Benefits:
- Generated code now passes dart analyzer without warnings
- More expressive and safer Java code with modern language features
- Clearer intent with getFirst() vs get(0)
- More concise switch expressions with arrow syntax

All changes tested and verified:
- Maven build: successful
- Tests: 53 passed, 0 failed
- Generated samples: updated with improved templates

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>